--- a/server/public/views/projects.html
+++ b/server/public/views/projects.html
@@ -1,100 +1,59 @@
 <h3>Projects</h3>
-<a id="home-link" href="#!/home">home</a> 
-<hr>
-<section id="cards">
+<md-divider></md-divider>
+<section id="cards" layout="row" layout-xs="column" layout-wrap>
+  <div id="card" flex-xs="100" flex="50">
+    <md-content class="md-padding">
+      <div>
+        <md-card>
+          <a href="https://caponiartpark.herokuapp.com" target="_blank">
+            <img ng-src="/images/outerspace.jpg" id="project-image" class="md-card-image" alt="Washed Out" />
+          </a>
+          <md-card-title>
+            <md-card-title-text>
+              <span id="card-title" class="md-headline">
+                <a href="https://caponiartpark.herokuapp.com" target="_blank">Caponi Art Park</a>
+              </span>
+            </md-card-title-text>
+          </md-card-title>
+          <md-card-content>
+            <p id="card-description">
+              The Caponi Art Park application is an interactive, mobile friendly web app that uses geolocation and a Google Map overlay
+              to locate a guest within the park as well as mark significant or nearby sculptures. Guests are able to select
+              markers from the map to learn more about each sculpture through associated photos, writings, anecdotes, or
+              poems. The application also allows guests to see upcoming events and sign up for the park's email list.
+            </p>
+          </md-card-content>
+        </md-card>
+      </div>
+    </md-content>
+  </div>
 
-    <div id="card">
-        <md-content class="md-padding" layout-xs="column" layout="row">
-                <div flex-xs  layout="column">
-                  <md-card>
-                        <a href="https://balsamiq.cloud/sfpm75q/pwpjtha">
-                    <img ng-src="/images/snake.jpg" id="project-image" class="md-card-image" alt="Washed Out"/>
-                        </a>
-                    <md-card-title>
-                      <md-card-title-text>
-                        <span id="card-title" class="md-headline"><a href="https://balsamiq.cloud/sfpm75q/pwpjtha">Caponi Art Park</a></span>
-                      </md-card-title-text>
-                    </md-card-title>
-                    <md-card-content>
-                      <p id="card-description">
-                        The Caponi Art Park application is an interactive application that allows visitors of the park
-                        to geolocate themselves on a trail map, overlaying Google Maps.  The map will show what attractions
-                        in the park may be near them and will allow users to interact with the map in a way that allows users
-                        to easily see what they're looking at, as well as any historical context--anecdotes, poems, and writings
-                        that may be associated with that location or statue.  Date to be completed: 4/26/18.
-                      </p>
-                    </md-card-content>
-                  </md-card></div></md-content>
-                </div>                     
+  <div id="card" flex-xs="100" flex="50">
+    <md-content class="md-padding">
+      <div>
+        <md-card>
+          <a href="https://slack-overflow-prime.herokuapp.com" target="_blank">
+            <img ng-src="/images/slackhome.png" id="project-image" class="md-card-image slack-img" alt="Washed Out" />
+          </a>
+          <md-card-title>
+            <md-card-title-text>
+              <span id="card-title" class="md-headline">
+                <a href="https://slack-overflow-prime.herokuapp.com" target="_blank">Slack Overflow</a>
+              </span>
+            </md-card-title-text>
+          </md-card-title>
+          <md-card-content>
+            <p id="card-description">
+              Slack Overflow, like Stack Overflow, allows users to search for and ask common development questions. The application is
+              targeted toward current Prime students and addresses questions that are most specific to Prime assignments
+              and technologies.
+            </p>
+          </md-card-content>
+        </md-card>
+      </div>
+    </md-content>
+  </div>
+</section>
 
-<div id="card">
-<md-content class="md-padding"  layout-xs="column" layout="row">
-        <div layout="column">
-          <md-card>
-                <a href="https://slack-overflow-prime.herokuapp.com">
-            <img ng-src="/images/slackoverflow.jpg" id="project-image" class="md-card-image" alt="Washed Out"/>
-                </a>
-            <md-card-title>
-              <md-card-title-text>
-                <span id="card-title" class="md-headline"><a href="https://slack-overflow-prime.herokuapp.com">Slack Overflow</a></span>
-              </md-card-title-text>
-            </md-card-title>
-            <md-card-content>
-              <p id="card-description">
-                Slack Overflow was my solo project at Prime Digital Academy and my biggest 'baby' to date.  
-                The site, like Stack Overflow, allows users to search for and ask about common development questions.
-                The application is targeted toward current Prime students to address questions that are most specific
-                to Prime assignments, technologies and 'problems'.  Technologies I used in the app were AngularJS, Node, 
-                Bootstrap, dirPagination, SQL, Express, ng tags input, sweetalert, dirPagination, Filestack, Heroku and Passport.
-                The next phase of Slack Overflow is to integrate Slack slash commands.
-              </p>
-            </md-card-content>
-          </md-card></div></md-content>
-        </div>
-
-        <div id="card" class="card-2">
-                <md-content class="md-padding" layout-xs="column" layout="row">
-                        <div layout="column">
-                          <md-card>
-                                <a href="https://powerful-wildwood-17671.herokuapp.com/">
-                            <img ng-src="/images/photos.jpg" id="project-image-1" class="md-card-image" alt="Washed Out"/>
-                                </a>
-                            <md-card-title>
-                              <md-card-title-text>
-                                <span id="card-title" class="md-headline"><a href="https://powerful-wildwood-17671.herokuapp.com/">Photo Gallery</a></span>
-                              </md-card-title-text>
-                            </md-card-title>
-                            <md-card-content>
-                              <p id="card-description">
-                                My Photo Gallery app displays photos and allows a user to add a photo, delete photos, comment on photos,
-                                and like photos.  My next step for this app would be to add authentication.  The technologies 
-                                I used in this application are AngularJS, bootstrap, Node, Express, and SQL.
-                              </p>
-                            </md-card-content>
-                          </md-card></div></md-content>
-                        </div>
-
-                        <div id="card">
-                                <md-content class="md-padding" layout-xs="column" layout="row">
-                                        <div flex-xs  layout="column">
-                                          <md-card>
-                                                <a href="https://www.eurekadiamondintheruff.com/">
-                                            <img ng-src="/images/diamond.jpg" id="project-image" class="md-card-image" alt="Washed Out"/>
-                                                </a>
-                                            <md-card-title>
-                                              <md-card-title-text>
-                                                <span id="card-title" class="md-headline"><a href="https://www.eurekadiamondintheruff.com/">A Diamond in the Ruff</a></span>
-                                              </md-card-title-text>
-                                            </md-card-title>
-                                            <md-card-content>
-                                              <p id="card-description">
-                                                A diamond in the Ruff was built for a local business owner, Christina, in Eureka, Montana.  
-                                                The application allows Christina to share a bit about her services, herself and her contact
-                                                information.  The website also displays her release form.  Before her website her customers 
-                                                would have to drive to her home to pick up and fill out a release form before they could leave 
-                                                their dog with her!
-                                              </p>
-                                            </md-card-content>
-                                          </md-card></div></md-content>
-                                        </div>
-                                       </section>
+<a id="home-link" href="#!/home">home</a>
+<br><br><br>
