took away target=blank

--- a/server/public/views/home.html
+++ b/server/public/views/home.html
@@ -11,7 +11,7 @@
     </div>
     <ul id="menu">
         <li class="list_item" id="resume"><a href="https://docs.google.com/document/d/10HYt1uRsQ3gTV85iq4Ji7FXVJPz_KonNNVM2kSrcIMU/edit?usp=sharing" target="_blank">RESUME</a></li>
-        <li class="list_item" id="projects"><a href="#!/projects" target="_blank">PROJECTS</a></li>
+        <li class="list_item" id="projects"><a href="#!/projects">PROJECTS</a></li>
         <li class="list_item" id="github"><a href="https://github.com/crouton21" target="_blank">GITHUB</a></li>
         <li class="list_item" id="linkedin"><a href="https://www.linkedin.com/in/christiana-routon-68535814a/" target="_blank">LINKEDIN</a></li>
     </ul>
