changed paragraph on home page

--- a/server/public/views/home.html
+++ b/server/public/views/home.html
@@ -6,8 +6,8 @@
     <div id="description">
         I began teaching math in 2015.  In 2016 I started the high school's first computer science class.  
         It was then that I discovered my true passion - development.  When I moved to Minneapolis in August I sought opportunities
-        to explore my passion.  That's how I found Prime Digital Academy.  I graduate in May with a certificate in full
-        stack engineering.
+        to explore my passion.  I found Prime Digital Academy and graduated in May 2018 with a certificate in full
+        stack engineering.  I am currently an associate software engineer at ICF Olson.
     </div>
     <ul id="menu">
         <li class="list_item" id="resume"><a href="https://docs.google.com/document/d/10HYt1uRsQ3gTV85iq4Ji7FXVJPz_KonNNVM2kSrcIMU/edit?usp=sharing" target="_blank">RESUME</a></li>
