--- a/server/public/views/home.html
+++ b/server/public/views/home.html
@@ -1,32 +1,14 @@
-<div id="home" layout="row" layout-xs="column">
-
-<!-- <div id="quote">“Any fool can write code that a computer can understand. Good programmers write code that humans can understand.”<div id="author">-Martin Fowler</div></div> -->
-<div id="paragraph" layout="column" flex-xs="100" flex="50">
-    <div id="name">Christiana Routon -- full stack web developer.</div>
-    <div id="description">
-        I began teaching math in 2015.  In 2016 I started the high school's first computer science class.  
-        It was then that I discovered my true passion - development.  When I moved to Minneapolis in August I sought opportunities
-        to explore my passion.  I found Prime Digital Academy and graduated in May 2018 with a certificate in full
-        stack engineering.  I am currently an associate software engineer at ICF Olson.
+<div class="grid fade-in">
+  <div class="menu">
+    <div><a href="#!/freelance">freelance</a></div>
+    <div><a href="#!/cv">c.v.</a></div>
+    <div><a href="#!/portfolio">portfolio</a></div>
+    <div><a href="#!/fun">fun</a></div>
+  </div>
+  <div class="page-container-home">
+    <div class="mc-esher-hands">
+      <img src="images/premierservicelarge.jpg"/>
     </div>
-    <ul id="menu">
-        <li class="list_item" id="resume"><a href="https://docs.google.com/document/d/10HYt1uRsQ3gTV85iq4Ji7FXVJPz_KonNNVM2kSrcIMU/edit?usp=sharing" target="_blank">RESUME</a></li>
-        <li class="list_item" id="projects"><a href="#!/projects">PROJECTS</a></li>
-        <li class="list_item" id="github"><a href="https://github.com/crouton21" target="_blank">GITHUB</a></li>
-        <li class="list_item" id="linkedin"><a href="https://www.linkedin.com/in/christiana-routon-68535814a/" target="_blank">LINKEDIN</a></li>
-    </ul>
+  </div>
+  <div class="small credit">IMAGE COURTESY OF CORDEN ART-BAARN</div>
 </div>
-
-    <div id="slider" flex="50" flex-xs="100">
-        <div id="photo-container">
-        <figure>
-        <img src="/images/christiana.jpg"/>
-        <img src="/images/glacier.jpg"/>
-        <img src="/images/slackoverflow.jpg"/>
-        <img src="/images/sabe.jpg"/>
-        <img src="/images/collagewebb.jpg"/>
-        </figure>
-        </div>
-    </div>
-</div>
-  
